# aptos-core

./: .dockerignore  .gitignore  Cargo.toml  fullnode.yaml
.github/actions/rust-setup/: action.yaml
.github/workflows/: build-docker-image.yaml  build-validator-image.yaml  lint-test.yaml  test-slack.yaml
api/src/: context.rs
api/types/: Cargo.toml
api/types/src/: lib.rs  move_types.rs  transaction.rs
aptos-move/aptos-aggregator/src/: transaction.rs
aptos-move/aptos-gas-meter/src/: meter.rs
aptos-move/aptos-gas-profiling/src/: profiler.rs
aptos-move/aptos-gas/src/: gas_meter.rs
aptos-move/aptos-memory-usage-tracker/src/: lib.rs
aptos-move/aptos-transactional-test-harness/src/: aptos_test_harness.rs
aptos-move/aptos-vm-profiling/: Cargo.toml
aptos-move/aptos-vm-types/src/: output.rs
aptos-move/aptos-vm/src/: adapter_common.rs  aptos_vm.rs  aptos_vm_impl.rs
aptos-move/e2e-tests/goldens/: language_e2e_testsuite__tests__call_traces__test__call_traces_are_available.exp  language_e2e_testsuite__tests__create_account__create_account.exp  language_e2e_testsuite__tests__data_store__borrow_after_move.exp  language_e2e_testsuite__tests__data_store__change_after_move.exp  language_e2e_testsuite__tests__data_store__move_from_across_blocks.exp  language_e2e_testsuite__tests__mint__mint_to_new_account_version_4.exp  language_e2e_testsuite__tests__module_publishing__bad_module_address.exp  language_e2e_testsuite__tests__module_publishing__duplicate_module.exp  language_e2e_testsuite__tests__module_publishing__layout_compatible_module.exp  language_e2e_testsuite__tests__module_publishing__layout_incompatible_module_with_new_field.exp  language_e2e_testsuite__tests__module_publishing__layout_incompatible_module_with_removed_field.exp  language_e2e_testsuite__tests__module_publishing__linking_incompatible_module_with_changed_param.exp  language_e2e_testsuite__tests__module_publishing__linking_incompatible_module_with_removed_pub_fn.exp  language_e2e_testsuite__tests__module_publishing__test_publishing_allow_modules.exp  language_e2e_testsuite__tests__module_publishing__test_publishing_modules_invalid_sender.exp  language_e2e_testsuite__tests__module_publishing__test_publishing_modules_proper_sender.exp  language_e2e_testsuite__tests__on_chain_configs__drop_txn_after_reconfiguration_version_4.exp  (+13 more)
aptos-move/e2e-tests/src/: executor.rs
crates/aptos-rest-client/: Cargo.toml
crates/mamoru-aptos-sniffer/: Cargo.toml
crates/mamoru-aptos-sniffer/src/: error.rs  lib.rs
docker/: docker-bake-rust-all.hcl  rust-all.Dockerfile
docker/builder/: builder.Dockerfile  docker-bake-rust-all.hcl  docker-bake-rust-all.sh
execution/block-partitioner/: Cargo.toml
execution/executor/: Cargo.toml
execution/executor-types/: Cargo.toml
sdk/: Cargo.toml
types/src/: proptest_types.rs
(+37 files in other folders)
